# DIY_AV-Entrainment

./: .gitignore  FreeFlow_12.json  README.md  README_Audio.md  README_Visual.md  gnaural_file_desc.md  main.py  realtime  requirements.txt  test_audio_generation.py  test_audio_generator.py
.github/workflows/: release.yaml
Create a new file gnaural/: voice_params.py with the following content
STL/: 6 LED Fixture.stl  Base Plate w esp32 holder.stl  Device_Cover.stl
audio/: README.md  audio_engine.py  requirements.txt  setup_audio.py  ui.py
audio/src/: README.md  REALTIME_BACKEND_PLAN.md  __init__.py  main.py
common/: README.md
gnaural/: audio_generator.py  envelope.py  node.py  voice.py
programs/: 3-step-frac.json  4-2  4-2.json  FreeFlow21.json  FreeFlow_21.json
src/: audio_generator.py  controller.py  run_on_device_6.py  sequence_editor.py  sequence_editor_dep.py  sequence_model.py  setup.py
src/audio/: README.md  REALTIME_BACKEND_PLAN.md  __init__.py  audio_engine.py  cli.py  main.py  noise_file.py  noise_flanger.py  preferences.py  realtime_backend.py  requirements.txt  settings_file.py  sound_creator.py  voice_file.py
src/audio/realtime_backend/: Cargo.toml  README.md  WASM_GUIDE.md
src/audio/realtime_backend/src/: audio_io.rs  command.rs  config.rs  gpu.rs  lib.rs  models.rs  noise_params.rs  scheduler.rs  voices.rs
src/audio/realtime_backend/src/dsp/: mod.rs  noise_flanger.rs
src/controllers/: file_controller.py  (+1 more)
tracks/: 3-step-frac.json  40hzsplit.json  AUDIO_LINKS.md  h_gamma_3.json  json_to_cpp.py
visual/: README.md
(+112 files in other folders)
