[package]
name = "realtime_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "realtime_backend"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
cpal = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustfft = "6.1"
biquad = "0.4"
rand = "0.8"
crossbeam = "0.8"
parking_lot = "0.12"
once_cell = "1.19"

